--- a/AgendaVirtual/agenda-app/src/app/records/components/record.component.html
+++ b/AgendaVirtual/agenda-app/src/app/records/components/record.component.html
@@ -22,7 +22,7 @@
                 <td>{{record.descripcion}}</td>
                 <td>{{record.fecha_cita}}</td>
                 <td>
-                    <button (click)="onUpdateRecord(record)" class="btn btn-sm btn-secondary">Actualizar</button> |
+                    <button for="btn-menu" (click)="onUpdateRecord(record)" class="btn btn-sm btn-secondary">Actualizar</button> |
                     <button (click)="onRemoveRecord(record.id_registro)" class="btn btn-sm btn-danger">Eliminar</button>
                 </td>
             </tr>
