--- a/AgendaVirtual/agenda-app/src/app/records/components/form.component.html
+++ b/AgendaVirtual/agenda-app/src/app/records/components/form.component.html
@@ -31,7 +31,7 @@
                     Se requiere un nombre
                 </div>
                 <div *ngIf="nombre.errors!['minlength']">
-                    El nombre debe tener al menos 5 caracteres
+                    Ingresa minimo 5 caracteres
                 </div>
             </div>
 
