--- a/AgendaVirtual/agenda-app/src/app/records/components/record.component.html
+++ b/AgendaVirtual/agenda-app/src/app/records/components/record.component.html
@@ -31,7 +31,8 @@
                             Actualizar
                         </a>
                         </label> |
-                    <button (click)="onRemoveRecord(record.id_registro)" class="btn btn-sm btn-danger">Eliminar</button>
+                        
+                        <button (click)="confirmAndRemoveRecord(record.id_registro)" class="btn btn-sm btn-danger">Eliminar</button>
                 </td>
             </tr>
         }
