--- a/AgendaVirtual/agenda-app/src/app/records/components/record.component.css
+++ b/AgendaVirtual/agenda-app/src/app/records/components/record.component.css
@@ -1,10 +1,14 @@
 .calendar-head{
 background-color: rgb(7, 190, 129);
 text-align: center;
-color: black;
+color: rgb(246, 252, 161);
 border-top-right-radius: 10px;
 border-top-left-radius: 10px;
 border: 1px solid black;
+}
+
+.calendar-head h3{
+    margin-top: 8px;
 }
 
 .table{
